# hermes

./: .rust-toolchain.toml  Cargo.toml  clippy.toml
.github/workflows/: rust.yml
examples/RabbitMQConsumer/: Cargo.toml
examples/RabbitMQConsumer/src/: main.rs
examples/RabbitMQConsumerGeneric/: Cargo.toml
examples/RabbitMQConsumerGeneric/src/: main.rs
examples/derive-example/: Cargo.toml
examples/derive-example/src/: main.rs
examples/rabbit-mq-retryer/: Cargo.toml
examples/rabbit-mq-retryer/src/: main.rs
examples/rabbit-queue-configurer/: Cargo.toml
examples/rabbit-queue-configurer/src/: main.rs
hermes-derive/: Cargo.toml
hermes-derive/src/: lib.rs
src/: event.rs  event_router.rs  lib.rs  subscriber.rs
src/bus/: asynchronous_bus.rs  error.rs  mod.rs  multithreading_bus.rs  rabbitmq_bus.rs  synchronous_bus.rs
src/consumer/: mod.rs  rabbitmq_consumer.rs  rabbitmq_retryer.rs
src/rabbit/: mod.rs  rabbit_channel.rs  rabbit_configurer.rs  rabbit_publisher.rs
src/serializer/: deserialized_event.rs  error.rs  event_registry.rs  mod.rs  serde_deserialize.rs  serde_formatter.rs  serde_serialize.rs  serialized_event.rs
